Bug 1916693 - [devtools] Adapt linear easing widget in High Contrast Mode. r=devtools-reviewers,ochameau
We also take this as an opportunity to force the widget in LTR,
as the animation preview as malfunctioning in RTL.

Differential Revision: https://phabricator.services.mozilla.com/D227173

--- a/devtools/client/shared/widgets/linear-widget.css
+++ b/devtools/client/shared/widgets/linear-widget.css
@@ -4,6 +4,7 @@
 
 .linear-easing-function-container {
   height: 100%;
+  direction: ltr;
 }
 
 .linear-easing-function-container .display-wrap {
@@ -49,6 +50,8 @@
     var(--timing-function-preview-scale) 55%,
     transparent 55%
   );
+  /* opt-out of forced colors so we can see the "line" gradient */
+  forced-color-adjust: none;
 }
 
 .linear-easing-function-container .timing-function-preview .dot::before {
